# Magitek

./: CMakeLists.txt  CMakeSettings.json  README.md
src/: CMakeLists.txt  init.c
src/loader/: CMakeLists.txt  loader.c
src/magitek/: CMakeLists.txt  init.c
